<resources>
    <array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </array>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="Toast_permission">权限</string>
    <string name="Dialog_Multi_Permission">多个权限</string>
    <string name="permission_illegal_code">非法权限</string>

    <string name="app_name">享醉-医生端</string>
    <string name="register">注册</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="obtain_captcha">获取验证码</string>
    <string name="login">登录</string>
    <string name="commit">提交</string>
    <string name="captcha">验证码</string>
    <string name="error_phone_num">手机号码不正确！</string>
    <string name="error_captcha_num">验证码不正确！</string>
    <string name="phone_num">手机号码</string>
    <string name="id_card">身份证</string>
    <string name="e_mail_address">邮箱地址</string>
    <string name="sex">性别</string>
    <string name="cancel">取消</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sure">确定</string>
    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="error_pwd">密码错误！</string>
    <string name="error_login">请选择正确的格式！</string>
    <string name="error_check_box">请勾选用户协议！</string>
    <string name="out">退出登录</string>
    <string name="is_upload"><u>已上传</u></string>
    <string name="error_name">用户名格式不正确！</string>
    <string name="click_out_again">再按一次退出程序</string>
    <string name="email_error">请输入正确的电子邮箱！</string>
    <string name="id_card_error">请输入正确的身份证号码！</string>
    <string name="input_error">输入格式不正确！</string>
    <string name="loading">正在加载...</string>
    <string name="open_network">请打开网络</string>
    <string name="link_timeout">请求超时</string>
    <string name="link_failed">连接失败</string>
    <string name="six_length_captcha">验证码必须为6位数字</string>
    <string name="out_to_login">确定要退出登录吗？</string>
    <string name="go_authentication">如需接单，请前往 <font color="#3F8AFE"><u>实名认证</u></font></string>


    <string name="demo_info_text">重要说明: \n\n本 Demo 为了方便向商户展示支付宝的支付流程，所以订单信息的加签过程放在客户端完成。\n在商户的真实App内，为了防止商户私密数据泄露，引发资金损失和身份冒用等各种安全风险，商户私钥 RSA_PRIVATE 等数据严禁放在客户端，订单信息的加签过程也务必放在服务端完成。\n若商户接入时不遵照此说明而造成损失，需自行承担。</string>
    <string name="pay_with_alipay">支付宝支付 Demo</string>
    <string name="pay_with_alipay_hk">HK 支付宝支付 Demo</string>
    <string name="auth_with_alipay">支付宝授权 Demo</string>
    <string name="web_to_native">网页支付转 native 支付 Demo</string>
    <string name="check_sdk_version">支付宝 SDK 版本</string>
    <string name="pay_success">支付成功:</string>
    <string name="pay_failed">支付失败:</string>
    <string name="auth_success">授权成功:</string>
    <string name="auth_failed">授权失败:</string>
    <string name="permission_already_granted">已有所需的权限</string>
    <string name="permission_rejected">无法获取所需的权限, 请到系统设置开启</string>
    <string name="permission_granted">所需的权限已经正常获取</string>
    <string name="error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="pay_result">支付结果:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">错误: 需要配置PARTNER |APP_ID| RSA_PRIVATE| TARGET_ID</string>
    <string name="alipay_sdk_version_is">支付宝 SDK 版本:</string>
    <string name="error_missing_h5_pay_url">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="error">错误</string>
    <string name="pay_cross_border">境外收单支付 Demo</string>
    <string name="error_missing_global_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="payment_inst_hk">付款方: HK</string>
    <string name="payment_inst_cn">付款方: CN</string>

    <string name="permission_location">无法获取定位所需的权限, 请到系统设置开启</string>
    <string name="permission_location_granted">定位所需的权限已经正常获取</string>
    <string name="reset_pwd"><u>密码重置 ?</u></string>
    <string name="now_register"><u>立即注册</u></string>
    <string name="now_login"><u>立即登录</u></string>
    <string name="agreement"><u>《用户协议》</u></string>
    <string name="title_activity_main">11111111111111111111111111111</string>
    <string name="regex_captcha">[0-9]*</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
